--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: web-entregas
     env: node
-    buildCommand: yarn install && yarn build
+    buildCommand: corepack enable && corepack prepare yarn@4.8.1 --activate && yarn install && yarn build
     startCommand: yarn preview
     envVars:
       - key: NODE_VERSION
-        value: 18.0.0 
+        value: 18.17.0 
