--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,15 @@ services:
   - type: web
     name: web-entregas
     env: node
-    buildCommand: corepack enable && corepack prepare yarn@4.8.1 --activate && yarn install && yarn build
+    buildCommand: |
+      npm install -g corepack
+      corepack enable
+      corepack prepare yarn@4.8.1 --activate
+      yarn install
+      yarn build
     startCommand: yarn preview
     envVars:
       - key: NODE_VERSION
-        value: 18.17.0 
+        value: 18.17.0
+      - key: YARN_VERSION
+        value: 4.8.1 
