--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,10 @@ services:
     name: web-entregas
     env: node
     buildCommand: |
-      npm install -g corepack
       corepack enable
       corepack prepare yarn@4.8.1 --activate
-      yarn install
+      yarn set version 4.8.1
+      yarn install --mode=update-lockfile
       yarn build
     startCommand: yarn preview
     envVars:
