--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "vercel-build": "yarn install && yarn build"
+    "vercel-build": "npm install && npm run build"
   },
   "dependencies": {
     "@emotion/react": "11.11.3",
