--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@types/react-router-dom": "5.3.3",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
-    "npm": "^11.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
@@ -46,6 +45,7 @@
     "vite": "^6.2.0"
   },
   "engines": {
-    "node": "18.x"
+    "node": "18.x",
+    "npm": "10.x"
   }
 }
