--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
             "headers": [
                 {
                     "key": "Access-Control-Allow-Origin",
-                    "value": "https://api-entregas.onrender.com"
+                    "value": "*"
                 },
                 {
                     "key": "Access-Control-Allow-Methods",
@@ -13,7 +13,7 @@
                 },
                 {
                     "key": "Access-Control-Allow-Headers",
-                    "value": "Content-Type, Authorization"
+                    "value": "Content-Type, Authorization, X-Requested-With, Accept"
                 }
             ]
         }
