--- a/package.json
+++ b/package.json
@@ -15,14 +15,20 @@
     "@emotion/styled": "11.11.0",
     "@hookform/resolvers": "^5.0.1",
     "@mui/material": "5.15.10",
+    "@radix-ui/react-slot": "^1.2.3",
     "@types/react-router-dom": "5.3.3",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.17.0",
+    "lucide-react": "^0.514.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
     "react-query": "^3.39.3",
     "react-router-dom": "6.22.0",
+    "tailwind-merge": "^3.3.1",
     "yup": "^1.6.1",
     "zustand": "^5.0.3"
   },
@@ -45,7 +51,7 @@
     "vite": "^6.2.0"
   },
   "engines": {
-    "node": "18.x",
-    "npm": "10.x"
+    "node": ">=18.x",
+    "npm": ">=10.x"
   }
 }
